feat: initial scaffolding